# encurta-axum

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  router.rs  web.rs
test/: encurta.hurl
