[package]
name = "encurta"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
libsql = "0.9.11"
limbo = "0.0.22"
serde = { version = "1.0.219", features = ["derive"] }
sha256 = "1.6.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
